--- a/ver/index.html
+++ b/ver/index.html
@@ -2,8 +2,9 @@
 <html>
     <head>
         <title></title>
+        <link rel="stylesheet" type="text/css" href="./css/style.css">
     </head>
     <body>
-        
+
     </body>
 </html>
